redis (6:8.0.0-3rl1~@RELEASE@1) @RELEASE@; urgency=low

  * Configuration and ACL description for redis modules in redis.conf
  * Systemd: unnecessary capabilities and redundant directives are removed
  * Building without modules is fixed

 -- Redis Labs <redis@redis.io> Tue, 25 Mar 2025 14:18:38 +0200

redis (6:8.0.0-2rl1~@RELEASE@1) @RELEASE@; urgency=low

  * New milestone 4

 -- Redis Labs <redis@redis.io>  Tue, 17 Mar 2024 18:15:02 +0300

redis (6:8.0.0-1rl1~@RELEASE@1) @RELEASE@; urgency=low

  * Testing.

 -- Redis Labs <redis@redis.io>  Tue, 01 Jun 2023 18:15:02 +0300

redis (6:6.2.4-1rl1~@RELEASE@1) @RELEASE@; urgency=low

  [ Security fixes ]
  * [CVE-2021-32625] Fix integer overflow in STRALGO LCS.

  [ Bug fixes that are only applicable to previous releases of Redis 6.2 ]
  * Fix crash after a diskless replication fork child is terminated (#8991)
  * Fix redis-benchmark crash on unsupported configs (#8916)

  [ Other bug fixes ]
  * Fix crash in UNLINK on a stream key with deleted consumer groups (#8932)
  * SINTERSTORE: Add missing keyspace del event when none of the sources exist (#8949)
  * Sentinel: Fix CONFIG SET of empty string sentinel-user/sentinel-pass configs (#8958)
  * Enforce client output buffer soft limit when no traffic (#8833)

  [ Improvements ]
  * Hide AUTH passwords in MIGRATE command from slowlog (#8859)

 -- Redis Labs <redis@redis.io>  Tue, 01 Jun 2021 18:15:02 +0300

redis (6:6.2.3-1rl1~@RELEASE@1) @RELEASE@; urgency=low

  [ Security fixes ]
  * [CVE-2021-29477] Fix integer overflow in STRALGO LCS.
  * [CVE-2021-29478] Fix integer overflow in COPY command for large intsets.

  [ Bug fixes that are only applicable to previous releases of Redis 6.2 ]
  * Fix memory leak in moduleDefragGlobals (#8853)
  * Fix memory leak when doing lazy freeing client tracking table (#8822)
  * Block abusive replicas from sending command that could assert and crash redis (#8868)

  [ Other bug fixes ]