@@ -1,3 +1,9 @@
+redis (6:8.0.0-4rl1~@RELEASE@1) @RELEASE@; urgency=low
+
+  * Redis CE 8.0 RC1
+
+ -- Redis Labs <redis@redis.io> Mon, 7 Apr 2025 13:39:38 +0200
+
 redis (6:8.0.0-3rl1~@RELEASE@1) @RELEASE@; urgency=low
 
   * Configuration and ACL description for redis modules in redis.conf
